# xml-to-postgres

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
src/: main.rs
