[package]
name = "xml-to-postgres"
version = "0.1.0"
authors = ["Bart Noordervliet <bart@mmvi.nl>"]
edition = "2018"
description = "Fast converter from XML to PostgreSQL dump format"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.18"
yaml-rust = "0.4"
