[package]
name = "xml-to-postgres"
version = "1.4.0"
authors = ["Bart Noordervliet <bart@mmvi.nl>"]
edition = "2021"
description = "Fast converter from XML to PostgreSQL dump format"
publish = false

[dependencies]
quick-xml = "0"
yaml-rust2 = "0"
regex = "1"
lazy_static = "1"
cow-utils = "0.1"
git-version = "0.3"
glob-match = "0"
